--- a/quartz-core/pom.xml
+++ b/quartz-core/pom.xml
@@ -12,6 +12,18 @@
     <groupId>com.quartz.system</groupId>
     <artifactId>quartz-core</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
