--- a/quartz-web/src/main/resources/quartz.properties
+++ b/quartz-web/src/main/resources/quartz.properties
@@ -22,3 +22,5 @@ org.quartz.jobStore.tablePrefix = QRTZ_
 org.quartz.jobStore.maxMisfiresToHandleAtATime=10
 org.quartz.jobStore.isClustered = true
 org.quartz.jobStore.clusterCheckinInterval = 20000
+
+org.quartz.scheduler.instanceName=test_sch
